zoom up/down with ctrl+mouse wheel scroll up/down with mouse wheel

--- a/Mija Reader/MainWindow.xaml
+++ b/Mija Reader/MainWindow.xaml
@@ -459,7 +459,7 @@
                         <RowDefinition></RowDefinition>
                         <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
-                    <ScrollViewer x:Name="tvImageScrool" Grid.ColumnSpan="2" Grid.RowSpan="3">
+                    <ScrollViewer x:Name="tvImageScrool" Grid.ColumnSpan="2" Grid.RowSpan="3" PreviewMouseWheel="tvImageScrool_PreviewMouseWheel">
                         <ScrollViewer.Resources>
                             <Style TargetType="{x:Type ScrollBar}">
                                 <Style.Triggers>
